--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,61 +1,3 @@
-/* ********* */
-/* Add Fonts */
-/* ********* */
-@font-face {
-    font-family: 'Heebo';
-    src: url('../fonts/Heebo-Thin.ttf');
-    font-weight: 100;
-}
-
-@font-face {
-    font-family: 'Heebo';
-    src: url('../fonts/Heebo-ExtraLight.ttf');
-    font-weight: 200;
-}
-
-@font-face {
-    font-family: 'Heebo';
-    src: url('../fonts/Heebo-Light.ttf');
-    font-weight: 300;
-}
-
-@font-face {
-    font-family: 'Heebo';
-    src: url('../fonts/Heebo-Regular.ttf');
-    font-weight: 400;
-}
-
-@font-face {
-    font-family: 'Heebo';
-    src: url('../fonts/Heebo-Medium.ttf');
-    font-weight: 500;
-}
-
-@font-face {
-    font-family: 'Heebo';
-    src: url('../fonts/Heebo-SemiBold.ttf');
-    font-weight: 600;
-}
-
-@font-face {
-    font-family: 'Heebo';
-    src: url('../fonts/Heebo-Bold.ttf');
-    font-weight: 700;
-}
-
-@font-face {
-    font-family: 'Heebo';
-    src: url('../fonts/Heebo-ExtraBold.ttf');
-    font-weight: 800;
-}
-
-@font-face {
-    font-family: 'Heebo';
-    src: url('../fonts/Heebo-Black.ttf');
-    font-weight: 900;
-}
-
-
 /* *********** */
 /* Main styles */
 /* *********** */
@@ -242,6 +184,10 @@ a:hover {
 /* **************** */
 
 
+.privacy_page {
+    max-width: 1300px;
+}
+
 .tn_policy_hero {
     margin-bottom: 20vh;
     background-image: url('../img/policy-hero.jpg');
@@ -287,8 +233,40 @@ a:hover {
 
 .tn_policy_tab_btn.active {
     border-bottom: solid 3px #158c01;
-    margin-left: 15px;
     font-weight: bolder;
+}
+
+
+/* ***** */
+/*  FAQ  */
+/* ***** */
+
+.tn_faq_hero {
+    margin-bottom: 12vh;
+    background-image: url('../img/faq-hero.jpg');
+    background-position: 50% 50%;
+    background-size: cover;
+    height: 250px;
+    width: 100%;
+}
+
+.tn_faq_hero_title h1 {
+    font-size: 1.8rem;
+}
+
+.faq_card.active {
+    box-shadow: 2px 10px 20px 0 rgb(2 19 79 / 10%);
+    transform: translateY(-5px);
+    border: 3px solid #158c01;
+}
+
+.faq_card img {
+    width: 80px;
+}
+
+.faq_card:hover {
+    box-shadow: 2px 10px 20px 0 rgb(2 19 79 / 10%);
+    transform: translateY(-5px);
 }
 
 
@@ -308,6 +286,10 @@ a:hover {
     }
 
     .tn_terms_hero_title h1 {
+        font-size: 3.5rem;
+    }
+
+    .tn_faq_hero_title h1 {
         font-size: 3.5rem;
     }
 
@@ -364,6 +346,10 @@ a:hover {
     }
 
     .tn_terms_hero_title h1 {
+        font-size: 4.5rem;
+    }
+
+    .tn_faq_hero_title h1 {
         font-size: 4.5rem;
     }
 
